testsuite/tests/grammar/invalid_list/invalid-element-type.lkt
import lexer_example

grammar foo_grammar {
    example <- Example(@example)
    num <- Num(@number)
    @main_rule main_rule <- or(
        ASTList[FooNode, Example]*(num)
        | ListNode(example)
    )
}
